--- a/multipage website attempt one/newproject.html
+++ b/multipage website attempt one/newproject.html
@@ -64,7 +64,7 @@
     
     <!-- i finished so so mr. stoneman had me do this -->
       
-    <button> <span> Hover </span> </button>
+    <a href= "2ndpage.html" ><button> <span> Hover </span> </button></a>
 
 
 
