fixed page buttons

--- a/multipage website attempt one/newproject.html
+++ b/multipage website attempt one/newproject.html
@@ -24,7 +24,7 @@
 
     <img src="Facts_-_Idil_Keysan_-_nov.6_2023.gif" alt="Image description">
 
-    <h3>  President Abraham Lincoln’s top hat had a purpose  </h3>
+    <h3>  President Abraham Lincoln's top hat had a purpose  </h3>
 
     <h6> President Lincoln's top hat was more than an accessory—he used it to store important notes and papers. It’s been said that he even wore the hat on the night of April 14, 1865, when he went to Ford’s Theatre. </h6>
 
@@ -114,7 +114,7 @@
     
     <!-- i finished so so mr. stoneman had me do this -->
       
-    <button> <span> Hover </span> </button>
+    <a href= "2ndpage.html" ><button> <span> Hover </span> </button></a>
 
 
 
