--- a/multipage website attempt one/2ndpage.html
+++ b/multipage website attempt one/2ndpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="2ndstyle.css">
   </head>
   <body>
     <h1>More Interesting Facts</h1>
